[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/space background.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/guardian2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Countdown.gd" type="Script" id=3]
[ext_resource path="res://Audio/mixkit-start-countdown-927_JRs4uDBr (1).wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 2 )

[node name="CountdownScreen" type="Node2D"]

[node name="CountdownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="SpaceBackground" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.534275, 0.50224 )
texture = ExtResource( 1 )

[node name="Countdown" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1, 1.04818 )
script = ExtResource( 3 )

[node name="Seconds" type="Label" parent="Countdown"]
margin_left = 472.0
margin_top = 206.072
margin_right = 539.0
margin_bottom = 286.072
rect_scale = Vector2( 1.27188, 1.83429 )
custom_colors/font_color = Color( 0.180392, 0.737255, 0.792157, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"
align = 1
valign = 1

[node name="Go" type="Label" parent="Countdown"]
margin_left = 424.0
margin_top = 206.072
margin_right = 491.0
margin_bottom = 286.072
rect_scale = Vector2( 1.27188, 1.83429 )
custom_colors/font_color = Color( 0.180392, 0.737255, 0.792157, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Countdown"]

[node name="EndGameTimer" type="Timer" parent="Countdown"]

[connection signal="timeout" from="Countdown/Timer" to="Countdown" method="_on_Timer_timeout"]
[connection signal="timeout" from="Countdown/EndGameTimer" to="Countdown" method="_on_EndGameTimer_timeout"]
